# JOBMR

./: Cargo.toml  README.md  output.txt
DOWNLOAD/: output.txt  setting.toml  webdown.py
DOWNLOAD/Map/: 1003554.osz  1012608.osz  1014936.osz
src/: main.rs
test/WEBURL/: Cargo.toml
test/WEBURL/src/: lib.rs
