[package]
name = "JOBMR"
version = "0.1.0"
edition = "2024"


[workspace]

[dependencies]
project_web_url = { path = "test/WEBURL"}
color-eyre = "0.6.3"
#crossterm = "0.28.1"
#ratatui = "0.29.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

